--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
 
 #nav{
    position: fixed;
+   top: 0;
+   z-index: 5;
    width: 100%;
    height: 50px;
    background: #202020;
@@ -25,14 +27,6 @@
    width: 50px;
    height: 50px;
    cursor: pointer;
-}
-
-.test{
-   position: fixed;
-   height: 100%;
-   width: 100%;
-   z-index: 1000;
-   background: black;
 }
 
 .nav-list{
