--- a/src/view/Home.css
+++ b/src/view/Home.css
@@ -7,10 +7,11 @@
 }
 
 .home-img-wrap{
+   position: relative;
    margin: 0;
    padding: 0;
-   font-size: 0;
    height: 100%;
+   box-sizing: border-box;
 }
 
 .home-img{
@@ -18,4 +19,35 @@
    width: 100%;
    height: 100%;
    object-fit: cover;
+}
+
+.home-arrow-wrap{
+   position: absolute;
+   z-index: 1;
+   width: 100%;
+   top: calc(50% - 75px);
+   box-sizing: border-box;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   font-size: 200px;
+   font-weight: bold;
+   height: 150px;
+   align-items: center;
+}
+
+.arrow{
+   position: relative;
+   text-align: center;
+   cursor: pointer;
+   vertical-align: super;
+   height: 100%;
+   line-height: 0.5;
+   opacity: 0.4;
+   user-select: none;
+}
+
+.arrow:hover{
+   opacity: 1;
+   text-shadow: 0 0 10px black;
 }
