--- a/src/view/Home.css
+++ b/src/view/Home.css
@@ -51,3 +51,62 @@
    opacity: 1;
    text-shadow: 0 0 10px black;
 }
+
+.nav-full-wrap{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background: black;
+   text-align: center;
+   font-weight: bold;
+   z-index: 4;
+   font-size: 20px;
+   display: none;
+}
+
+.nav-flex-wrap{
+   display: flex;
+   position: relative;
+   width: 100%;
+   height: 100%;
+   flex-direction: column;
+   justify-content: center;
+   box-sizing: border-box;
+}
+
+.nav-flex-wrap div{
+   margin: 20px;
+   cursor: pointer;
+   width: 300px;
+   margin-left: auto;
+   margin-right: auto;
+   font-size: 40px;
+   border: 1px solid red;
+}
+
+.nav-flex-wrap div:hover{
+   color: dodgerblue;
+}
+
+.close-nav-full-wrap{
+   position: absolute;
+   right: 25px;
+   top: 25px;
+   font-weight: bold;
+   cursor: pointer;
+   font-size: 35px;
+   z-index: 1;
+}
+
+.close-nav-full-wrap:hover{
+   color: dodgerBlue;
+}
+
+@media only screen and (max-width: 500px) {
+   .nav-flex-wrap div{
+      font-size: 25px;
+      width: 150px;
+   }
+}
