--- a/src/view/Home.css
+++ b/src/view/Home.css
@@ -52,6 +52,9 @@
    text-shadow: 0 0 10px black;
 }
 
+.no-show{display:none;}
+.show{display:block;}
+
 .nav-full-wrap{
    position: absolute;
    top: 0;
@@ -63,7 +66,6 @@
    font-weight: bold;
    z-index: 4;
    font-size: 20px;
-   display: none;
 }
 
 .nav-flex-wrap{
@@ -90,21 +92,8 @@
    color: dodgerblue;
 }
 
-.close-nav-full-wrap{
-   position: absolute;
-   right: 25px;
-   top: 25px;
-   font-weight: bold;
-   cursor: pointer;
-   font-size: 35px;
-   z-index: 1;
-}
-
-.close-nav-full-wrap:hover{
-   color: dodgerBlue;
-}
-
 @media only screen and (max-width: 500px) {
+
    .nav-flex-wrap div{
       font-size: 25px;
       width: 150px;
