--- a/src/view/Home.css
+++ b/src/view/Home.css
@@ -92,6 +92,70 @@
    color: dodgerblue;
 }
 
+.home-text-wrap{
+   position: absolute;
+   top: 0;
+   box-sizing: border-box;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   user-select: none;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+
+.home-text-wrap div{
+   margin: 20px;
+   font-size: 35px;
+   /* font-family: 'Nunito', sans-serif; */
+   font-family: 'Russo One', sans-serif;
+}
+
+.shine {
+  background: #222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
+  -webkit-background-size: 150px;
+  background-size: 150px;
+  color: rgba(255, 255, 255, 0.3);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-animation-name: shine;
+  animation-name: shine;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  text-shadow: 0 0px 0px rgba(255, 255, 255, 0.5);
+}
+
+/* .chrome {
+  background: #222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
+  background-image: -webkit-linear-gradient(-40deg, transparent 0%, transparent 40%, #fff 50%, transparent 60%, transparent 100%);
+  -webkit-background-size: 200px;
+  color: rgba(255, 255, 255, 0.3);
+  -webkit-background-clip: text;
+  -webkit-animation-name: shine;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  text-shadow: 0 0px 0px rgba(255, 255, 255, 0.5);
+} */
+
+@keyframes shine {
+  0%,
+	10% {
+    background-position: -1000px;
+  }
+  20% {
+    background-position: top left;
+  }
+  90% {
+    background-position: top right;
+  }
+  100% {
+    background-position: 1000px;
+  }
+}
+
 @media only screen and (max-width: 500px) {
 
    .nav-flex-wrap div{
