--- a/src/view/Signin.css
+++ b/src/view/Signin.css
@@ -1,7 +1,9 @@
 #Signin{
    position: relative;
-   top: 50px;
+   margin-top: 50px;
+   height: 1vh;
    text-align: center;
+   background: black;
 }
 
 .signin{
@@ -69,6 +71,20 @@
    font-size: 20px;
    width: 400px;
    cursor: pointer;
+}
+
+.signup-title2{
+   margin-top: 50px;
+   border-bottom: 1px solid white;
+   font-size: 30px;
+   line-height: 0.1;
+   margin-bottom: 30px;
+}
+
+.signup-title2 span{
+   background: black;
+   padding: 20px;
+   font-weight: bold;
 }
 
 @media only screen and (max-width: 600px) {
