--- a/src/view/component/signup.css
+++ b/src/view/component/signup.css
@@ -1,3 +1,8 @@
+.signup{
+   position: relative;
+   background: black;
+}
+
 .signup-form{
    position: relative;
    display: flex;
@@ -6,7 +11,8 @@
    margin: auto;
 }
 
-.signup-form input {
+.signup-form input,
+.signup-form button {
    font-size: 30px;
 }
 
@@ -19,7 +25,8 @@
       width: 250px;
    }
 
-   .signup-form input{
+   .signup-form input,
+   .signup-form button{
       font-size: 20px;
    }
 }
