--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,15 @@
    box-sizing: border-box;
 }
 
+.nav-list a{
+   color: lightGrey;
+   text-decoration: none;
+}
+
+.nav-list a:hover{
+   color: white;
+}
+
 .logo{
    position: absolute;
    left: 0;
@@ -51,7 +60,7 @@
    color: lightGrey;
 }
 
-.sign-in{
+.sign-in a{
    position: absolute;
    right: 0;
    top: 0;
@@ -65,9 +74,10 @@
    cursor: pointer;
    user-select: none;
    font-size: 20px;
+   text-decoration: none;
 }
 
-.sign-in:hover{
+.sign-in a:hover{
    color: dodgerblue;
 }
 
@@ -101,7 +111,6 @@
    -webkit-transform: rotate(45deg) translate(-8px, -8px);
    transform: rotate(45deg) translate(-8px, -8px);
  }
-
 
 @media only screen and (max-width: 1000px) {
    .nav-list div{
