--- a/src/view/Home.css
+++ b/src/view/Home.css
@@ -106,10 +106,29 @@
 }
 
 .home-text-wrap div{
+   box-sizing: border-box;
    margin: 20px;
-   font-size: 35px;
+   font-size: 7vh;
    /* font-family: 'Nunito', sans-serif; */
    font-family: 'Russo One', sans-serif;
+}
+
+.github{
+   font-size: 25px !important;
+   border: 4px solid rgba(255, 255, 255, 0.3);
+   color: rgba(255, 255, 255, 0.3);
+   border-radius: 3px;
+   /* color:rgba(255, 255, 255, 0.3); */
+   padding: 10px;
+   cursor: pointer;
+}
+
+.github:hover{
+   box-shadow: 0 0 3px black;
+   text-shadow: 0 0 3px black;
+   color: whiteSmoke;
+   border-color: white;
+   transition: all 0.5s;
 }
 
 .t2{animation-delay: 0.1s;}
