--- a/src/view/About.css
+++ b/src/view/About.css
@@ -1,4 +1,31 @@
 #About{
    position: relative;
    top: 50px;
+   width: 100%;
+   height: calc(100% - 50px);
+   text-align: center;
+   background-color: #2d3436;
+   background-image: linear-gradient(315deg, #2d3436 0%, #000000 60%);
+   font-family: 'Nunito', sans-serif;
+   text-shadow: 0 0 2px black;
+}
+
+.about-paragraph{
+   position: relative;
+   width: 80%;
+   margin: auto;
+   font-size: 18px;
+   text-align: left;
+   text-indent: 25px;
+}
+
+.about-disclaimer{
+   position: relative;
+   width: 80%;
+   margin: auto;
+}
+
+.disclaimer-title{
+   font-size: 25px;
+   font-weight: bold;
 }
