--- a/src/view/About.css
+++ b/src/view/About.css
@@ -1,31 +1,66 @@
+
+
 #About{
    position: relative;
    top: 50px;
    width: 100%;
    height: calc(100% - 50px);
    text-align: center;
-   background-color: #2d3436;
-   background-image: linear-gradient(315deg, #2d3436 0%, #000000 60%);
+   /* background-color: #2d3436;
+   background-image: linear-gradient(315deg, #2d3436 0%, #000000 60%); */
+   /* background-image: url('../assets/dark_background.jpg'); */
    font-family: 'Nunito', sans-serif;
    text-shadow: 0 0 2px black;
+   box-sizing: border-box;
 }
 
 .about-paragraph{
    position: relative;
-   width: 80%;
+   width: 65%;
    margin: auto;
-   font-size: 18px;
+   font-size: 20px;
    text-align: left;
    text-indent: 25px;
 }
 
 .about-disclaimer{
    position: relative;
-   width: 80%;
+   width: 65%;
    margin: auto;
+   font-size: 20px;
 }
 
 .disclaimer-title{
    font-size: 25px;
    font-weight: bold;
+}
+
+.imgs-wrap{
+   position: relative;
+   bottom: 0%;
+   width: 100%;
+   margin: auto;
+   margin-top: 25px;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   box-sizing: border-box;
+}
+
+.imgs-wrap img{
+   margin: 20px;
+   cursor: pointer;
+   opacity: 0.8;
+}
+
+.imgs-wrap img:hover{
+   transform: scale(1.2);
+   transition: all 0.1s;
+   opacity: 1;
+}
+
+@media only screen and (max-width: 600px) {
+   .imgs-wrap img{
+      margin: 10px;
+   }
 }
