--- a/src/view/Signin.css
+++ b/src/view/Signin.css
@@ -22,6 +22,12 @@
    margin: auto;
 }
 
+.signin-message{
+   position: relative;
+   font-size: 20px;
+   color: rgb(250, 102, 102);
+}
+
 .signin-h1{
    border-bottom: 1px solid white;
    line-height: 0.1;
