--- a/src/view/component/dashboard.css
+++ b/src/view/component/dashboard.css
@@ -2,4 +2,32 @@
    position: relative;
    top: 80px;
    text-align: center;
+   text-underline-position: under;
+}
+
+.dashboard-status-wrap{
+   position: relative;
+   width: 70%;
+   margin: auto;
+   display: flex;
+   flex-direction: column;
+   font-size: 25px;
+   box-sizing: border-box;
+}
+
+.dashboard-status-wrap div{
+   background: #303030;
+   padding: 5px;
+   box-sizing: border-box;
+   border-radius: 3px;
+}
+
+.email-status button{
+   font-size: 20px;
+}
+
+.profile-img{
+   position: relative;
+   width: 200px;
+   height: 200px;
 }
