--- a/src/view/Hardware.css
+++ b/src/view/Hardware.css
@@ -2,4 +2,24 @@
    position: relative;
    top: 80px;
    text-align: center;
+   text-underline-position: under;
+   box-sizing: border-box;
+}
+
+.hardware-content{
+   position: relative;
+   width: 50%;
+   margin: auto;
+   margin-top: 50px;
+}
+
+.hardware-content img{
+   width: 100%;
+   border-radius: 3px;
+}
+
+.content-title{
+   font-size: 50px;
+   background: rgb(30, 91, 189);
+   border-radius: 3px;
 }
