--- a/src/view/Hardware.css
+++ b/src/view/Hardware.css
@@ -4,6 +4,7 @@
    text-align: center;
    text-underline-position: under;
    box-sizing: border-box;
+   word-wrap: break-word;
 }
 
 .hardware-content{
@@ -22,4 +23,17 @@
    font-size: 50px;
    background: rgb(30, 91, 189);
    border-radius: 3px;
+}
+
+
+@media only screen and (max-width: 1000px) {
+   .content-title{
+      font-size: 30px;
+   }
+}
+
+@media only screen and (max-width: 600px) {
+   .hardware-content{
+      width: 90%;
+   }
 }
