--- a/src/view/component/nav-div.css
+++ b/src/view/component/nav-div.css
@@ -1,9 +1,23 @@
 #nav_div{
    position: fixed;
-   z-index: 1;
+   z-index: 2;
    top: 50px;
    left: 0;
    width: 100%;
    height: 100%;
-   background: green;
+   background: rgb(39, 20, 20);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: flex-start;
+}
+
+#nav_div div{
+   margin-top: 50px;
+   font-size: 30px;
+   font-weight: bold;
+}
+
+#nav_div div a{
+   color: white;
 }
